--- a/FBbox/style.css
+++ b/FBbox/style.css
@@ -1,15 +1,15 @@
- 
- 
- @font-face {
+
+ @font-face
+{
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 500;
   src: local("Open Sans"), local("OpenSans"), url("http://themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff") format("woff");
 }
 
-
-body{  font-family: "Open Sans",arial;
-color:#999999;
+body
+{  font-family: "Open Sans",arial;
+	color:#999999;
 }
 
 #main_container
@@ -24,12 +24,12 @@ color:#999999;
     display: block;
     font-size: 14px;
     line-height: 1.42857;
-  
     transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
     vertical-align: middle;
-    }
+}
 	
-.form-control {
+.form-control
+{
     display: block;
     width: 96%;
     height: 104px;
@@ -40,7 +40,6 @@ color:#999999;
     vertical-align: middle;
     background-color: #FFF;
     background-image: none;
-   
     border-radius: 4px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
     transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
@@ -50,7 +49,6 @@ color:#999999;
 {
 	line-height:30px;
 	padding-left:15px;
-
 	background-color:#f5f5f5;
 }
 #add_possible_answer
@@ -61,7 +59,7 @@ color:#999999;
 }
 #announcement
 {
-	 padding-left:15px;
+	padding-left:15px;
 	border-top: 1px dotted #DDD;
 	border-bottom: 1px dotted #DDD;
 	height:40px;
@@ -78,10 +76,10 @@ color:#999999;
 	padding-top:4px;
     margin:auto;
 	height:25px;
-    }
+}
 .inline-block
 { display: inline-block;
-    }
+ }
     
 .entirecompanyicon
 {
@@ -94,7 +92,7 @@ color:#999999;
 {	color:#aaaaaa; font-size:12px;}
 
 #feedback360
-{ padding-left:15px;
+{   padding-left:15px;
 	width:100%;
 	border-top: 1px dotted #DDD;
 	height:40px;
@@ -105,20 +103,20 @@ color:#999999;
 .feedback360_icon
 { font-size:20px; padding-right:15px;}
 
-.line { background-color: #AAAAAA;
-  
+.line 
+{ 	background-color: #AAAAAA;
     height: 20px;
     margin-top: 5px;
-    width: 2px;}
+    width: 2px;
+}
 	
 . paddingleft { padding-left:15px;}
-.feedback
+.feedback 
 { 
 width:31%; margin:auto; text-align:center;
-
 }
 .share-widget-actions {
- -moz-border-bottom-colors: none;
+    -moz-border-bottom-colors: none;
     -moz-border-left-colors: none;
     -moz-border-right-colors: none;
     -moz-border-top-colors: none;
@@ -126,23 +124,21 @@ width:31%; margin:auto; text-align:center;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     border-image: none;
-
     border-width: medium 1px 1px;
     padding: 8px 15px;
 
 }
-#box_bottom
-{ height:40px; background-color: #F5F5F5;}
 .bottom-icon
 { padding:15px; font-size:18px;  color:#ababab;}
-
 .iconcolorblue { color:#70b5e3; }
 .feedback360_icon
-{ display: inline-block;  text-align:center; margin:auto; text-decoration: none;
-
-background-color: #FFF;
-border-color: #CCC;
-border-radius: 4px; padding-top:10px; padding-left:15px;  }
-
+{
+	display: inline-block;  text-align:center; margin:auto; text-decoration: none;
+	background-color: #FFF;
+	border-color: #CCC;
+	border-radius: 4px; padding-top:10px; padding-left:15px;  
+}
 #caret {  z-index:1;}
 #caret_360 { background-color:#000;}
+#box_bottom
+{ height:40px; background-color: #F5F5F5;}
