--- a/public/templates/dashboard/activity_feed.html
+++ b/public/templates/dashboard/activity_feed.html
@@ -4,17 +4,32 @@
 <meta charset="UTF-8">
 <title>Untitled Document</title>
 
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic" rel="stylesheet">
-<link href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet">
-<link href="../../themes/landing/css/font-awesome.min.css" rel="stylesheet">
-<link href="../../themes/landing/css/bootstrap.min.css" rel="stylesheet">
-<link href="/css/validationEngine.jquery.css" rel="stylesheet">
-<link href="/css/alertify.core.css" rel="stylesheet">
-<link href="/css/alertify.bootstrap3.css" rel="stylesheet">
-<link href="../../themes/landing/css/mvpready-landing.css" rel="stylesheet">
-<link href="../../themes/landing/css/mvpready-flat.css" rel="stylesheet">
-<link href="../../themes/landing/css/animate.css" rel="stylesheet">
-<link href="/img/favicon.ico" rel="shortcut icon">
+ <!-- Font Awesome CSS -->
+        <link rel="stylesheet" href="../themes/admin/css/font-awesome.min.css">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="../themes/admin/css/bootstrap.min.css">
+
+        <!-- Validation CSS -->
+        <link rel="stylesheet" href="../css/validationEngine.jquery.css"/>
+
+        <!-- Alertify -->
+        <link rel="stylesheet" href="../css/alertify.core.css"/>
+        <link rel="stylesheet" href="../css/alertify.bootstrap3.css"/>
+
+        <!-- App CSS -->
+        <link rel="stylesheet" href="../themes/admin/css/mvpready-admin.css">
+        <link rel="stylesheet" href="../themes/admin/css/mvpready-flat.css">
+        <link rel="stylesheet" href="../css/dashboard.css"/>
+
+        <!-- HTML5 shim -->
+        <!--[if lt IE 9]>
+            <script type="text/javascript" src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script type="text/javascript" src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+
+        <link rel="shortcut icon" href="/themes/img/favicon.ico">
+<link href="../themes/landing/css/mvpready-landing-new-style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -239,6 +254,22 @@
             </div>
         </div>
     </div>
+    
+    
+        <!-- Bootstrap core JavaScript  -->
+        <script type="text/javascript" src="/themes/admin/js/libs/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="/themes/admin/js/libs/bootstrap.min.js"></script>
+
+        <!-- Validation JS -->
+        <script type="text/javascript" src="/js/jquery.validationEngine-en.js"></script>
+        <script type="text/javascript" src="/js/jquery.validationEngine.js"></script>
+
+        <!-- Alertify JS -->
+        <script type="text/javascript" src="/js/alertify.js"></script>
+
+        <!-- App JS -->
+        <script type="text/javascript" src="/themes/admin/js/mvpready-core.js"></script>
+        <script type="text/javascript" src="/themes/admin/js/mvpready-admin.js"></script>
 </body>
 
 </html>
