update text and design

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -89,7 +89,7 @@
                                         <div class="form-group">
                                             <input type="text"
                                                 name="organization"
-                                                placeholder="Organization"
+                                                placeholder="Company Name"
                                                 class="form-control validate[required]">
                                         </div>
 
@@ -97,7 +97,7 @@
                                             <input type="email"
                                                 id="email"
                                                 name="email"
-                                                placeholder="Email"
+                                                placeholder="Company Email Address"
                                                 class="form-control validate[required,custom[email]]">
                                         </div>
 
@@ -169,8 +169,7 @@
                                 <h1 class="masthead-title">Mistake-Proof Messages</h1>
 
                                 <p class="masthead-text-">
-                                    Reduce the unnecessary pressure associated with sending anything that will be evaluated in-house. 
-                                    Preventing stress and mental fatigue has never been easier.
+                                   Reduce the unnecessary pressure when sending anything that may contain mistakes. Preventing stress and burnout has never been easier.
                                 </p>
 
                                 <br>
@@ -196,11 +195,9 @@
                     <div class="item">
                         <div class="row">
                                 <div class="col-md-6 masthead-text animated fadeInDownBig">
-                                    <h1 class="masthead-title">360 Degree Feedback</h1>
+                                    <h1 class="masthead-title">360-Degree Feedback</h1>
                                     <p class="masthead-text-">
-                                        Evaluate coworkers using a technique called 360-degree feedback. 
-                                        When implemented effectively, a 360-degree feedback system 
-                                        can lead to dynamic and positive change.
+                                        Evaluate coworkers using a technique called 360-degree feedback. Implementing a 360-degree feedback system effectively using video/files can lead to dynamic and positive change.
                                     </p>
                                     <br>
                                     <div class="masthead-actions">
@@ -241,7 +238,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-sm-push-6">
-                    <h4 class="content-title">
+                    <h4 class="content-title why-choose-us">
                       <span>What is 360notion™</span>
                     </h4>
                     <p>
